Version 0.4 - 2017-07-05
* Allow to use file-like object
* Allow to define file encoding

Version 0.3 - 2016-01-27
* Add support for RegioBank description format
* Set a default description after setting a statement

Version 0.2 - 2015-04-29
* Add Statement description
* Renamed properties of Transaction to follow the norm
* Add support for ING specific description format

Version 0.1 - 2014-06-25
* Initial release