@@ -1,0 +1,13 @@
+ABNANL2A
+940
+ABNANL2A
+:20:ABN AMRO BANK NV
+:25:123456789
+:28:13501/1
+:61:1205120514C500,01N654NONREF
+987654321
+:61:1412051205RC15,67IDXXREF
+DATA
+:61:171214C15,67TIDXTEST//REFERENCE
+:86:/SUM/
+-
