@@ -1,3 +1,5 @@
+* Do not fail on optional balances
+
 Version 0.4 - 2017-07-05
 * Allow to use file-like object
 * Allow to define file encoding
